--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-chat-engine": "^1.8.10",
     "react-dom": "^16.13.1",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
