--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
-    "dotenv": "^10.0.0",
     "firebase": "^7.20.0",
+    "fs": "0.0.1-security",
     "react": "^16.13.1",
     "react-chat-engine": "^1.8.10",
     "react-dom": "^16.13.1",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,6 +37,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "REACT_APP_CHAT_ENGINE_PROJECT_ID",
+      "REACT_APP_CHAT_ENGINE_PRIVATE_KEY"
     ]
   }
 }
