--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "firebase": "^7.20.0",
-    "fs": "0.0.1-security",
     "react": "^16.13.1",
     "react-chat-engine": "^1.8.10",
     "react-dom": "^16.13.1",
@@ -16,8 +16,8 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -37,12 +37,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "react-dotenv": {
-    "whitelist": [
-      "REACT_APP_CHAT_ENGINE_PROJECT_ID",
-      "REACT_APP_CHAT_ENGINE_PRIVATE_KEY"
     ]
   }
 }
